<resources>
    <string name="app_name">인터벌 메이커</string>
    <string name="music">노래</string>
    <string name="settings">설정</string>
    <string name="list_wantToBe_playList">플레이리스트가 되고 싶은 어떤 리스트</string>
    <string name="timer">타이머</string>
    <string name="sets">SETS</string>
    <string name="walk">WALK</string>
    <string name="run">RUN</string>
    <string name="save">저장</string>
    <string name="contact_guide">문의사항이 있으면 익명이를 눌러주세요</string>
    <string name="path">경로</string>
    <string name="path_somewhere">경로어딘가</string>
    <string name="go_back_list">리스트로 돌아가기</string>
    <string name="mm_ss">%02d:%02d</string>

    <string name="searchingMusic">음악을 검색하는 중 이에요</string>
    <string name="waitForSearch">얼른 찾아올 테니\n잠시만 기다려 주세요…!</string>

    <string name="preparingDownload">음악 다운로드를 위해 준비중 이에요</string>
    <string name="waitForPrepare">곧 다운로드가 시작되니\n잠시만 기다려 주세요…!</string>
</resources>