<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ddodang.intervalmusicspeedchanger.presentation.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_title_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textView_timerSettingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/timer"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_title_settings" />

                <View
                    android:id="@+id/view_borderTimer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bordered_rectangle_with_subpink"
                    app:layout_constraintBottom_toBottomOf="@id/view_space"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_timerSettingTitle" />

                <TextView
                    android:id="@+id/textView_setsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sets"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/view_borderTimer" />

                <ImageButton
                    android:id="@+id/imageButton_reduceSets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.decreaseSet()}"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintBottom_toBottomOf="@id/textView_setsCount"
                    app:layout_constraintEnd_toStartOf="@id/textView_setsCount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView_setsCount"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/textView_setsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{Integer.toString(viewModel.intervalSettingFlow.setCount)}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_setsLabel"
                    tools:text="1" />


                <ImageButton
                    android:id="@+id/imageButton_increaseSets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.increaseSet()}"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@id/textView_setsCount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView_setsCount"
                    app:layout_constraintTop_toTopOf="@id/textView_setsCount"
                    app:tint="@color/black" />


                <TextView
                    android:id="@+id/textView_walkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/walk"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_setsCount" />


                <ImageButton
                    android:id="@+id/imageButton_reduceWalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.decreaseWalkingMinute()}"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintBottom_toBottomOf="@id/textView_walkCount"
                    app:layout_constraintEnd_toStartOf="@id/textView_walkCount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView_walkCount"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/textView_walkCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{Integer.toString(viewModel.intervalSettingFlow.walkingMinutes)}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_walkLabel"
                    tools:text="1" />


                <ImageButton
                    android:id="@+id/imageButton_increaseWalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.increaseWalkingMinute()}"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@id/textView_walkCount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView_walkCount"
                    app:layout_constraintTop_toTopOf="@id/textView_walkCount"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/textView_runLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/run"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_walkCount" />

                <ImageButton
                    android:id="@+id/imageButton_reduceRun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.decreaseRunningMinute()}"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintBottom_toBottomOf="@id/textView_runCount"
                    app:layout_constraintEnd_toStartOf="@id/textView_runCount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView_runCount"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/textView_runCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{Integer.toString(viewModel.intervalSettingFlow.runningMinutes)}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_runLabel"
                    tools:text="1" />


                <ImageButton
                    android:id="@+id/imageButton_increaseRun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.increaseRunningMinute()}"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@id/textView_runCount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView_runCount"
                    app:layout_constraintTop_toTopOf="@id/textView_runCount"
                    app:tint="@color/black" />

                <View
                    android:id="@+id/view_space"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_runCount" />


                <Button
                    android:id="@+id/button_saveTimerSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rectangle"
                    android:onClick="@{() -> viewModel.saveIntervalSettings()}"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_space" />


                <ImageButton
                    android:id="@+id/imageButton_contact"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_saveTimerSettings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/contact_guide"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/imageButton_contact"
                    app:layout_constraintEnd_toEndOf="@id/imageButton_contact"
                    app:layout_constraintStart_toStartOf="@id/imageButton_contact" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>